# IBag151

./: .gitignore  CMakeLists.txt  README.md
data/: readme.txt
doc/: readme.txt
include/: Camera.hpp  Drone.hpp  Menu.hpp  Package.hpp  iMovement.hpp  readme.txt
lib/: readme.txt
lib/cleanscreen/: cleanScreen.cpp  cleanScreen.hpp
model/: ClassDiagram.drawio  readme.txt
src/: main.cpp  readme.txt
tests/: readme.txt  testCamera.cpp  testDrone.cpp  testMenu.cpp  testMovement.cpp  testPackage.cpp
